--- a/src/style.css
+++ b/src/style.css
@@ -17,6 +17,32 @@ body{
     display: grid;
     grid-template-columns: 23% 45% 32% ;
 }
+/* .Messages{
+    position:fixed;
+    width: 25%;
+    padding: 15px 20px;
+    box-shadow: 0px 0.5px 9px 0px rgb(214, 212, 214);
+    bottom:0px;
+    right:15px;
+    border-radius: 20px 20px 0 0;
+    background-color: #FFFFFF;
+    display:flexbox;
+    flex-direction: row;
+}
+.Messages>p{
+    margin:0;
+    width: 50%;
+    
+}
+.newMessageIcon{
+  
+}
+
+.messageExpandIcon{
+       
+} */
+
+
 .LeftSideBar{
     border-right: 1px solid rgb(239,243,244);
     padding-left:30px;
@@ -104,7 +130,7 @@ body{
     padding:10px 20px 0 20px;
 }
 #tweetButtonPost{
-    Background-color: #8ECDF8;
+    
     color:white;
     border: none;
     padding:10px 20px;
@@ -367,4 +393,48 @@ input::placeholder{
 }
 .postLikeIcon:hover p{
     color:#F8519E;
+}
+
+
+.DisplayWhatsHappening{
+    margin-bottom: 25px;
+}
+.dwhInfo,
+.dwhTitle,
+.dwhAdditionalInfo{
+    margin: 0;
+    padding: 3px;
+}
+
+.dwhInfo,
+.dwhAdditionalInfo{
+    font-size: 0.6em;
+    color: #536471;
+}
+.dwhTitle{
+    font-size: 0.7em;
+    font-weight: 600;
+}
+.dwhHasImg{
+    display: grid;
+}
+.dwhHasImgInfo{
+    grid-column: 1;
+    grid-row: 1;
+}
+.dwhHasImgTitle{
+    grid-column: 1;
+    grid-row: 2;
+}
+
+.dwhHasImgAdditionalInfo{
+    grid-column: 1;
+    grid-row: 3;
+}
+.dwhImg{
+    grid-column: 2;
+    grid-row: 1/span 3;
+    height: 80%;
+    width: 80%;
+    border-radius: 10px;
 }
